# personal-homelab

./: .gitignore  .gitmodules  .sops.yaml  README.md  Taskfile.yml  mise.toml
ansible/: ansible.cfg  inventory.yaml  mise.toml  playbook.yaml
archive/terraform/: .gitignore  README.md
blog/: README.md  Taskfile.yml
blog/infrastructure/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
blog/public/: index.html  index.xml
cloud/bootstrap/: provider.tf
cloud/global/: .terraform.lock.hcl  provider.tf  variables.tf
cloudflare/: README.md  main.tf  provider.tf  variables.tf
deployments/bootstrap/: main.tf  provider.tf
deployments/core/: .terraform.lock.hcl  cloudflare-policies.tf  cloudflare-reusable.tf  cloudflare.tf  main.tf  provider.tf  variables.tf
deployments/global/: cloudflare-applications.tf
deployments/homelab/: .gitignore  README.md  mise.toml
deployments/secrets/: main.tf  provider.tf  variables.tf
docker/: docker-compose.yaml
documentation/: comfyui.md  hardware.md  homelab-specifications.md  kubernetes-control-pane.md  on-prem-network.md  onprem-gpu-installation-gatchas.md  secret-management.md  storage-migration.md  terraform.md
documentation/assets/: gaborzeller-homelab-networkdiagram.drawio
homelab-diagrams/: pyproject.toml
homelab-diagrams/homelab_diagrams/: main.py
onprem/: .env.example  mise.toml  secrets.yaml
onprem/ansible/: inventory.yaml  playbook.yaml
onprem/desktop/: ansible.cfg.example  (+2 more)
terraform/: .gitignore  .terraform.lock.hcl  README.md  Taskfile.yml  main.tf  mise.toml  provider.tf  variables.tf
(+157 files in other folders)
