[tool.poetry]
name = "homelab-diagrams"
version = "0.1.0"
description = ""
authors = ["GaborZeller <gabriel.d.celery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
diagrams = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
